--- a/ArduinoScope/ArduinoScope/ArduinoScope.csproj
+++ b/ArduinoScope/ArduinoScope/ArduinoScope.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>ArduinoScope</RootNamespace>
     <AssemblyName>ArduinoScope</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
@@ -108,6 +108,7 @@
     <Compile Include="GraphVisualizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SamplePoint.cs" />
     <Compile Include="SignalChannel.cs" />
     <Compile Include="TimeUnit.cs" />
     <Compile Include="Utility.cs" />
