--- a/ArduinoScope/ArduinoStudio/ArduinoStudio.csproj
+++ b/ArduinoScope/ArduinoStudio/ArduinoStudio.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Msgbox.cs" />
+    <Compile Include="PinMode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestType.cs" />
