--- a/ArduinoScope/ArduinoStudio/ArduinoStudio.csproj
+++ b/ArduinoScope/ArduinoStudio/ArduinoStudio.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ArduinoCommunicator.cs" />
     <Compile Include="Delegates.cs" />
+    <Compile Include="DigitalPin.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
