--- a/ArduinoScope/ArduinoStudio/ArduinoStudio.csproj
+++ b/ArduinoScope/ArduinoStudio/ArduinoStudio.csproj
@@ -47,7 +47,12 @@
   <ItemGroup>
     <Compile Include="ArduinoCommunicator.cs" />
     <Compile Include="Delegates.cs" />
-    <Compile Include="DigitalPin.cs" />
+    <Compile Include="DigitalPinController.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DigitalPinController.Designer.cs">
+      <DependentUpon>DigitalPinController.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +64,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestType.cs" />
+    <EmbeddedResource Include="DigitalPinController.resx">
+      <DependentUpon>DigitalPinController.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
