--- a/ArduinoScope/ArduinoStudio/ArduinoStudio.csproj
+++ b/ArduinoScope/ArduinoStudio/ArduinoStudio.csproj
@@ -45,6 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalogPin.cs" />
+    <Compile Include="AnalogPinControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AnalogPinControl.Designer.cs">
+      <DependentUpon>AnalogPinControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ArduinoCommunicator.cs" />
     <Compile Include="BoolControl.cs">
       <SubType>UserControl</SubType>
@@ -53,20 +60,8 @@
       <DependentUpon>BoolControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Delegates.cs" />
-    <Compile Include="DigitalOutMode.cs" />
     <Compile Include="DigitalPin.cs" />
-    <Compile Include="DigitalPinController.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="DigitalPinController.Designer.cs">
-      <DependentUpon>DigitalPinController.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DigitalPinList.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="DigitalPinList.Designer.cs">
-      <DependentUpon>DigitalPinList.cs</DependentUpon>
-    </Compile>
+    <Compile Include="DigitalPinMode.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,19 +69,6 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Msgbox.cs" />
-    <Compile Include="OutputModeControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="OutputModeControl.Designer.cs">
-      <DependentUpon>OutputModeControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PinMode.cs" />
-    <Compile Include="PinModeControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="PinModeControl.Designer.cs">
-      <DependentUpon>PinModeControl.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PwmValueControl.cs">
@@ -102,23 +84,14 @@
     <Compile Include="ToneValueControl.Designer.cs">
       <DependentUpon>ToneValueControl.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AnalogPinControl.resx">
+      <DependentUpon>AnalogPinControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BoolControl.resx">
       <DependentUpon>BoolControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DigitalPinController.resx">
-      <DependentUpon>DigitalPinController.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DigitalPinList.resx">
-      <DependentUpon>DigitalPinList.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="OutputModeControl.resx">
-      <DependentUpon>OutputModeControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PinModeControl.resx">
-      <DependentUpon>PinModeControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -147,6 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TODO.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
